components/react-books-app-images/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
